welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit = 0
 def HaveBaggle():Boolean = {
    if (estSurBiscuit() == true) {
	   vuBiscuit = 1
        return;
    }
}

for(i <- 1 to 7)
{
	avance()
	HaveBaggle()
}
